unified_tests/tests/group_declaration_with_non_test_declaration/expect/build.text.stderr
lib.test.copp:2:5: error: expected test declaration
      function helper() -> nil {
      ^
